globally save and load npcs